# ocaml-mlir

./: .gitignore  .ocamlformat  README.md  mlir.opam
config/: discover.ml
examples/: dune  simple.ml
examples/simple/: dune  simple.ml
mlir-c/: IR.h
src/config/: discover.ml  dune
src/core/: core.ml  core.mli  dune  transforms_intf.ml  wrapper.ml
src/mlir/: dune  mlir.ml  mlir.mli  wrapper.ml
src/stubs/: affine_expr.ml  affine_map.ml  builtin_attributes.ml  builtin_types.ml  diagnostics.ml  dune  ir.ml  pass.ml  registration.ml  standard_attributes.ml  standard_dialect.ml  standard_types.ml  stubs.ml  support.ml  transforms.ml  typs.ml
src/stubs/types/: dune  types.ml
src/types/: dune  types.ml
src/wrapper/: dune  wrapper.ml  wrapper.mli
stubs/: dune  ir.ml  pass.ml  stubs.ml  support.ml
tests/: dune  ir.ml  pass.ml  test_runner.ml
types/: dune  types.ml
wrapper/: wrapper.ml
