opam-version: "2.0"
authors: [ "Ta-Chu Kao" ]
license: "MIT"
homepage: "https://github.com/tachukao/ocaml-mlir"
dev-repo: "git+https://github.com/tachukao/ocaml-mlir.git"
bug-reports: "https://github.com/tachukao/ocaml-mlir/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "ctypes"
]
synopsis: "Bindings to LLVM MLIR"
description: "OCaml bindings to LLVM MLIR"
