(library
 (name stubs)
 (public_name mlir.stubs)
 (libraries mlir.types ctypes.stubs ctypes ctypes.foreign))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover ../config/discover.exe))
 (action
  (run %{discover})))

(rule
 (targets types_bindings.ml)
 (deps ../gen/gen_types_c.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))
